2005-07-03 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot: All files: converted to C++.  My reason for not
	  using C++ turned out to be incorrect, while later directory overlaying
	  functions may be made considerably easier by using the C++ STL.

	* reroot/libreroot/error.cc, reroot/libreroot/error.h: Added exception
	  handling support function.
	* reroot/libreroot/filename.cc (init_reroot): Added exception handling.

	* reroot/libreroot/filename.cc (init_false_root): Minor bug fixed.

	* reroot/libreroot/filename.cc, reroot/libreroot/filename.h: Added
	  ability to query whether filenames should be rerooted.

	* reroot/libreroot/filesystem.cc: Added but empty.

	* reroot/libreroot/persona.cc: Added overrides for `setreuid' &
	  `setregid'.

2005-07-02 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/libc.h: Fixed error in comment.

	* reroot/libreroot/persona.c: Fixed use of uid_t when gid_t should have
	  been used.

	* reroot/libreroot/Makefile, reroot/rerootd/Makefile: Enabled -O2.

2005-07-02 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/expect.pkg: Added --with-tclinclude to configure
	  line.
	* profiles/lfs-6.1/findutils.pkg: Upgraded to findutils 4.2.23.
	* profiles/lfs-6.1/flex.pkg: Upraded to latest flex patch.
	* profiles/lfs-6.1/grep.pkg: Removed --with-included-regex from stage1
	  build.
	* profiles/lfs-6.1/gzip.pkg: Added compress symlink to gzip.
	* profiles/lfs-6.1/mktemp.pkg: Upgraded to latest mktemp patch.
	* profiles/lfs-6.1/shadow.pkg: Upgraded to shadow 4.0.9, removed
	  lastlog patch.

2005-07-01 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/filesystem.c: Added.

2005-06-30 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/libc.c, reroot/libreroot/libc.h: dlsymed more persona
	  functions.
	* reroot/libreroot/persona.c: Added more persona functions.

2005-06-29 Gareth Jones <gareth_jones@users.berlios.de>
